--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyasn1_modules==0.4.2
 pydantic==2.12.4
 pydantic_core==2.41.5
 pyparsing==3.2.5
+python-dotenv==1.2.1
 requests==2.32.5
 rsa==4.9.1
 sqlparse==0.5.3
